--- a/project3/views/nav.ejs
+++ b/project3/views/nav.ejs
@@ -1,7 +1,7 @@
 <header>
   <img id="home-icon" src="fav.ico">
   <marquee>
-    ⁂ This site is maintained by Collector Jack, who helped start GOTP and
+    ⁂ This site is maintained by Collector Jack, who helped start CCCC and
     collected for 72 novas. Due to a leg amputation, they are no longer able to
     collect, but continues to update this site regularly and actively encourages
     younger folks to join. Last updated 14.07.C2 ⁂
