--- a/project3/public/style.css
+++ b/project3/public/style.css
@@ -4,7 +4,7 @@
 }
 
 @font-face {
-  font-family: proggy-clean;
+  font-family: "proggy-clean";
   src: url(fonts/proggy-clean.ttf) format("truetype");
 }
 
@@ -20,7 +20,7 @@ body {
   overflow-x: hidden;
 
   color: rgb(207, 215, 196);
-  font-family: pixelated-wingdings;
+  font-family: "pixelated-wingdings";
   font-size: 16px;
   width: 100%;
   margin: 0px;
